@@ -52,6 +52,18 @@ class TestBigDecimal < Test::Unit::TestCase
     assert_equal(1, BigDecimal("1"))
     assert_equal(1, BigDecimal("1", 1))
     assert_raise(ArgumentError) { BigDecimal("1", -1) }
+    assert_raise(ArgumentError) { BigDecimal(4.2) }
+    begin
+      BigDecimal(4.2)
+    rescue ArgumentError => error
+      assert_match(/Float/, error.message)
+    end
+    assert_raise(ArgumentError) { BigDecimal(42.quo(7)) }
+    begin
+      BigDecimal(42.quo(7))
+    rescue ArgumentError => error
+      assert_match(/Rational/, error.message)
+    end
   end
 
   def test_global_new_with_integer
